2004-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Updated with changes up to today's date.
	* tests/constitute.c (main): Float type seems to require allowing
	a bit of error for Q:32.
	* magick/constitute.c (DispatchImage): Be more careful when
	rounding pixel intensity.
	(ConstituteImage): Be more careful when converting float and
	double to Quantum.
	* magick/composite.c (CompositeImage): Fix Multiply composite
	operator for Q:32 build (was all black image).
	(CompositeImage): Tidied up the documented composite operators so
	the implementation is easier to understand.
	* PerlMagick/t/ttf/read.t: Set a desired label size so output
	image should be the same size as the reference image even if the
	FreeType type hinter is disabled.
	* magick/annotate.c (RenderFreetype): Improve outline bounding box
	computation accuracy.

2004-03-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/x/write.t: Don't test X11 if DISPLAY is not set.
	* PerlMagick/t/x/read.t: Don't test X11 if DISPLAY is not set.

2004-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/Makefile.am: Removed some apparently unnecessary library
	dependencies.
	* Makefile.am (windows-src): Added a way to generate a Windows
	source zip file.

2004-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: The -operator command now supports
	floating-point and percent of range arguments.

2004-03-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Added support for -operator command with
	syntax "-operator channel operator rvalue" which applies a
	arithmetic or bitwise operator to a specified image channel
	or all channels.

2004-03-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/filter.t: Fix Solarize test case.
	* PerlMagick/t/wmf/read.t: Added another WMF test case.
	* coders/wmf.c: Resolve WMF rendering bug with black color.
	* magick/utility.c (StringToArgv): Free argv data prior to error