@@ -53,6 +53,14 @@
 </tr>
 </table>
 <p>
+2004-03-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/composite.c (CompositeImage): Fix overflow condition
+        which occured on non-Intel architectures.
+
+</UL>
+<p>
 2004-03-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
