@@ -1,3 +1,8 @@
+2004-03-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/composite.c (CompositeImage): Fix overflow condition
+	which occured on non-Intel architectures.
+
 2004-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* NEWS: Updated with changes up to today's date.
